--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Text converter is the word counter and a charcter utlity is the app which can be used to manipulate your text in the way you want."
+      content="Text converter is the word counter and a charcter utlity is the app which can be used to manipulate your Text in the way you want."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
